--- a/interface/package.json
+++ b/interface/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^5.2.4",
+    "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.36.2",
